# GPUFabric

./: .gitignore  Cargo.toml  LICENSE  README.md  build-cuda128-fixed.sh
gpuf-c/: Cargo.toml  Cargo_cuda.toml  MAJOR_PROBLEMS.md  PROBLEMS_AND_SOLUTIONS.md  README.md  build.rs  build_cuda.sh  compile_android.sh  compile_ios_sdk.sh  generate_ios_sdk.sh  generate_llama_ios.sh  generate_sdk.sh  gpuf_c.h  icon.rc  install.sh  install_client.ps1  install_client.sh
gpuf-c/.cargo/: config.toml  config.toml.example
gpuf-c/build_android/: android_test
gpuf-c/build_llama_ios/iphoneos-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  llama-config.cmake  llama.pc
gpuf-c/build_llama_ios/iphonesimulator-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  llama-version.cmake
gpuf-c/docs/: BUILD_GUIDE.md  COMPUTE_SHARING_DIAGRAMS.md  INFERENCE_SERVICE_ARCHITECTURE.md  INITIALIZATION_GUIDE.md  MODEL_MANAGEMENT_GUIDE.md  MODEL_STATUS_EXAMPLES.md  MULTIMODAL_ROADMAP.md  OFFLINE_MODE_GUIDE.md  SDK_REQUIREMENTS.md  sdk-compute-sharing-flow.mmd  sdk-compute-sharing-sequence.mmd
gpuf-c/docs/PLATFORM_GUIDES/: WINDOWS_BUILD.md
gpuf-c/examples/: android_test  android_test.c  inference_client.rs  llama_usage.rs  model_switch_test.c  performance_test.rs  test_callback_mock
gpuf-c/examples/android/: android_inference_test.c  android_inference_test_optimized.c
gpuf-c/examples/ios_sim_test/: run_ios_sim_test.sh
gpuf-c/examples/rust/: test_client_sdk.rs
gpuf-c/scripts/: build-android.ps1  build-android.sh  build-windows.sh  build_windows_cuda12.ps1  g++-wrapper.sh  gcc-wrapper.sh  mingw_fix.h  test_android_inference.sh
gpuf-c/src/: inference_proxy.rs  inference_shared.rs  jni_remote_worker.rs  lib.rs  llama_wrapper.rs  main.rs  sd_embedding_extractor.rs
gpuf-c/src/handle/: android_sdk.rs  handle_tcp.rs  handle_ws.rs  mod.rs  sd_inference_handler.rs  worker_sdk.rs
gpuf-c/src/llm_engine/: inference_service.rs  llama_engine.rs  llama_server.rs  mod.rs  ollama_engine.rs  remote_llm_client.rs  vllm_engine.rs
gpuf-c/src/util/: asm.rs  cmd.rs  config.rs  mod.rs  (+7 more)
(+328 files in other folders)
