[package]
name = "gpuf-c"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
anyhow = { workspace = true }

clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }

reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1.54"
sysinfo = "0.37.0"
plist = "1.7.4"
rand = "0.9.2"
nvml-wrapper = "0.11.0"
serde_json = "1"
futures-util = "0.3"
bytes = "1"
hex = { workspace = true }
tokio-tungstenite = "0.28.0"
url = "2.5.0"
serde_yaml = "0.9.34-deprecated"
dirs = "6.0.0"
toml = "0.7"


[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
nvml-wrapper = { version = "0.11.0" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.17.1"

[target.'cfg(target_os = "macos")'.dependencies]
acpi = "6.0.1"  
raw-cpuid = "11.6.0"  
regex = "1.7.1"

[dev-dependencies]
tempfile = "3.3"
